# firmware

./: .gitignore  Cargo.toml  README.md  build.rs  custom-sections.x  diagnose.sh  example.rs  flash.sh  partitions.csv
.cargo/: config.toml
src/: connection.rs  driver.rs  lib.rs  net_task.rs  sta.rs
src/patch/: helper.rs  mod.rs  part.rs
src/patch/helper/: log.rs
