[package]
edition      = "2024"
name         = "firmware"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "firmware"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32c3", "log-04", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c3", "log-04"] }
log                    = "0.4.27"

critical-section = "1.2.0"
embedded-io = "0.7.1"
esp-alloc = "0.10.0"
esp-println = { version = "0.17.0", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.18.0", features = [
  "esp-alloc",
  "esp32c3",
  "log-04",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
embassy-executor = "0.10.0"
embassy-futures = "0.1.2"
embassy-net = "0.9.1"
embassy-time = "0.5.1"
embedded-io-async = "0.7.0"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
